[package]
name = "chars"
version = "0.3.3-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
description = "A commandline tool to display information about unicode characters"
license = "MIT"

exclude = [
        "data/*",
        "generator/*",
]

[lib]
name = "chars"
path = "src/lib.rs"

[[bin]]
name = "chars"
path = "src/main.rs"

[dependencies]
unicode_names2 = "0.2.1"
unicode-width = "0.1.5"
byteorder = "1"
lazy_static = "1.0.0"
fst = "0.3.0"

[dev-dependencies]
proptest = "0.6.0"

[features]
default = []

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}} 🎉🎉"
pro-release-commit-message = "Start next development iteration {{version}}"
tag-message = "Release {{prefix}}{{version}}"
dev-version-ext = "dev"
tag-prefix = "v"

[badges]
circle-ci = { repository = "antifuchs/chars", branch = "master" }
maintenance = { status = "passively-maintained" }
