[package]
name = "chars"
version = "0.4.1"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
description = "A commandline tool to display information about unicode characters"
license = "MIT"
repository = "https://github.com/antifuchs/chars"
readme = '../README.md'
keywords = ['unicode', 'cli']
categories = ['command-line-utilities', 'localization']

build = "build.rs"

[lib]
name = "chars"
path = "src/lib.rs"

[[bin]]
name = "chars"
path = "src/main.rs"

[dependencies]
unicode_names2 = "0.3.0"
unicode-width = "0.1.5"
byteorder = "1"
lazy_static = "1.0.0"
fst = "0.3.0"

[dev-dependencies]
proptest = "0.6.0"

[build-dependencies]
chars_data = {path = "../chars_data", version = "^0.4.1-dev"}

[features]
default = []

[badges]
circle-ci = { repository = "antifuchs/chars", branch = "master" }
maintenance = { status = "passively-maintained" }
