[package]
name = "chars_data"
version = "0.1.0"
authors = ["Andreas Fuchs <asf@boinkor.net>"]

[lib]
name = "chars_data"
path = "src/lib.rs"

[[bin]]
name = "chars_data"
path = "src/main.rs"

[dependencies]
regex = "0.1"
lazy_static = "0.2.1"
fst = "0.1"
quick-error = "1.1.0"
unicode_names2 = "0.3.0"
getopts = "0" # This should go in the bin deps section once https://github.com/rust-lang/cargo/issues/1982 is in.
