[package]
name = "chars_data"
version = "0.5.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
description = "Build-dependency for chars, the unicode character information CLI."
repository = "https://github.com/antifuchs/chars"
readme = '../README.md'
keywords = ["build-dependencies", "unicode", "codegen"]
license = "MIT"
edition = "2018"

[lib]
name = "chars_data"
path = "src/lib.rs"

[[bin]]
name = "chars_data"
path = "src/main.rs"

[dependencies]
regex = "1.4"
lazy_static = "1.4.0"
fst = "0.4"
quick-error = "1.2.3"
unicode_names2 = "0.4.0"
getopts = "0" # This should go in the bin deps section once https://github.com/rust-lang/cargo/issues/1982 is in.
