[package]
name = "chars_data"
version = "0.7.0"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
description = "Build-dependency for chars, the unicode character information CLI."
repository = "https://github.com/antifuchs/chars"
readme = '../README.md'
keywords = ["build-dependencies", "unicode", "codegen"]
license = "MIT"
edition = "2018"

[lib]
name = "chars_data"
path = "src/lib.rs"

[dependencies]
regex = "1.11"
lazy_static = "1.5.0"
fst = "0.4"
anyhow = "1.0.98"
unicode_names2 = "0.6.0"
